# parental-unifi-quick-set

./: .dockerignore  .gitignore  COMMIT_GUIDELINES.md  Cargo.toml  Dockerfile  FEATURES.md  README.md  docker-compose.yml  fly.toml  index.html
.cursor/rules/: README.md  deployment-config.mdc  git-commit-standards.mdc  project-structure.mdc  rust-axum-patterns.mdc  unifi-api-guidelines.mdc
.github/workflows/: deploy.yml
docs/: AUTHENTICATION_OPTIONS.md  UNIFI_SETUP_GUIDE.md
scripts/: install-hooks.sh  quick-commit.sh  setup-aliases.sh
scripts/git-hooks/: pre-commit
src/: main.rs
